test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Thu, 29 May 2025 14:52:03 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="KnjPU3w2f0jI6fQ+oNV7cog6PHCcnC2D", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}